--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ PUB_KEY_PATH=id_rsa.pub
 GIT_USER=Dowding
 GIT_EMAIL=857995137@qq.com
 
-DOCKER_MIRROR=https://2cllxuc3.mirror.aliyuncs.com
+DOCKER_MIRROR=https://mirror.ccs.tencentyun.com
